--- a/templates/default.j2
+++ b/templates/default.j2
@@ -1,11 +1,10 @@
 #
-# Mode : {{ nginx_mode }}
 #
 server {
   listen   80; ## listen for ipv4; this line is default and implied
 
   root {{ nginx_root }};
-  index index.php index.html index.htm;
+  index index.html index.htm;
 
   # Make site accessible from http://localhost/
   server_name _;
@@ -23,16 +22,6 @@ server {
   error_page 500 502 503 504 /50x.html;
   location = /50x.html {
     root /usr/share/nginx/html/;
-  }
-
-  # pass the PHP scripts to FastCGI server listening on 127.0.0.1:9000
-  #
-  location ~ \.php$ {
-    try_files $uri =404;
-    fastcgi_split_path_info ^(.+\.php)(/.+)$;
-    fastcgi_pass unix:/var/run/php5-fpm.sock;
-    fastcgi_index index.php;
-    include fastcgi_params;
   }
 
   # deny access to .htaccess files, if Apache's document root
