--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -16,7 +16,13 @@ http {
     tcp_nopush  on;
     tcp_nodelay on;
 
+    # SSL stuff
     ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
+    ssl_ciphers "EECDH+ECDSA+AESGCM EECDH+aRSA+AESGCM EECDH+ECDSA+SHA384 EECDH+ECDSA+SHA256 EECDH+aRSA+SHA384 EECDH+aRSA+SHA256 EECDH+aRSA+RC4 EECDH EDH+aRSA !RC4 !aNULL !eNULL !LOW !3DES !MD5 !EXP !PSK !SRP !DSS";
+
+    ssl_session_cache shared:SSL:32m;
+    ssl_buffer_size 8k;
+    ssl_session_timeout 10m;
 
     keepalive_timeout     65;
     types_hash_max_size 2048;
