--- a/templates/nginx.j2
+++ b/templates/nginx.j2
@@ -29,7 +29,7 @@ http {
   ssl_buffer_size 8k;
   ssl_session_timeout 10m;
 
-  keepalive_timeout     65;
+  keepalive_timeout     {{ nginx_keepalive_timeout }};
   types_hash_max_size 2048;
 
   server_tokens off;
@@ -60,15 +60,16 @@ http {
   gzip_comp_level 6;
   gzip_buffers 16 8k;
   gzip_http_version 1.1;
-  gzip_types  application/javascript 
-              application/json 
-              application/x-javascript 
-              application/xml 
-              application/xml+rss 
+  gzip_min_length  1000;
+  gzip_types  application/javascript
+              application/json
+              application/x-javascript
+              application/xml
+              application/xml+rss
               image/svg+xml
-              text/css 
+              text/css
               text/plain
-              text/xml 
+              text/xml
               text/javascript;
 
   ##
@@ -87,4 +88,3 @@ http {
 }
 
 include /etc/nginx/top.d/*.conf;
-
